--- a/src/main/resources/templates/profiles.html
+++ b/src/main/resources/templates/profiles.html
@@ -2,47 +2,61 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/main.css}" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<title>identiDAT - Perfiles</title>
+    <title>identiDAT - Perfiles</title>
 </head>
 
 <body>
-    <div class="row d-flex justify-content-center align-items-center h-100">
-        <img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
-    </div>
-    <h2 class="text-uppercase text-center mb-5">Miembros del Censo</h2>
-    <div class="borderTable align-middle" style="border-radius: 15px;">
+    <div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
+        </div>
+        <h2 class="text-uppercase text-center mb-5">Miembros del Censo</h2>
+        <div class="borderTable align-middle" style="border-radius: 15px;">
 
-        <table id="Perfiles" class="table table-striped table-hover" style="width:95%; margin: auto;">
-            <thead>
-                <tr style="background-color:rgb(196, 196, 196);">
-                    <th>Nombre</th>
-                    <th>Apellidos</th>
-                    <th>Email</th>
-                    <th>Teléfono</th>
-                    <th>Titulación</th>
-                    <th style="text-align: center">Perfil</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="censusMember: ${censusMembers}">
-                    <td th:text="${censusMember.name}">
-                    <td th:text="${censusMember.surname}">
-                    <td th:text="${censusMember.email}">
-                    <td th:text="${censusMember.phone}">
-                    <td th:text="${censusMember.degree}">
-                <td class="text-center">
-                    <a href="#/" onclick="showProfile($(this))"><a href="#/" onclick="showProfile($(this))"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F65555" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path></svg></a></a>
-
-                </td>
-                </tr>
-            </tbody>
-        </table>
+            <table id="Perfiles" class="table table-striped table-hover" style="width:95%; margin: auto;">
+                <thead>
+                    <tr style="background-color:rgb(196, 196, 196);">
+                        <th>Nombre</th>
+                        <th>Apellidos</th>
+                        <th>Email</th>
+                        <th>Teléfono</th>
+                        <th>Titulación</th>
+                        <th style="text-align: center">Perfil</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr th:each="censusMember: ${censusMembers}">
+                        <td th:text="${censusMember.name}">
+                        <td th:text="${censusMember.surname}">
+                        <td th:text="${censusMember.email}">
+                        <td th:text="${censusMember.phone}">
+                        <td th:text="${censusMember.degree}">
+                        <td class="text-center">
+                            <a th:href="@{profiles/edit/} + ${censusMember.id}"><svg xmlns="http://www.w3.org/2000/svg"
+                                    width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F65555"
+                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M12 20h9"></path>
+                                    <path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"></path>
+                                </svg></a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
+
+    <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+    <script th:src="@{/js/jquery.dataTables.min.js}"></script>
+	<script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+	<script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+	<script th:src="@{/js/adminFunctions.js}"></script>
 </body>
