--- a/src/main/resources/templates/tokens.html
+++ b/src/main/resources/templates/tokens.html
@@ -2,107 +2,63 @@
 <html lang="es">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
-	<link rel="stylesheet" th:href="@{/css/main.css}" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap5.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/materialdesignicons.min.css}" />
+    <link rel="stylesheet" th:href="@{/css/main.css}" />
 
-	<title>identiDAT - Tokens</title>
+    <title>identiDAT - Test</title>
 </head>
 
 <body>
 
-	<div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
-	<div class="container h-100">
-		<div class="row d-flex justify-content-center align-items-center h-100">
-			<img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
-		</div>
-		<div class="row d-flex justify-content-center align-items-center h-100">
-			<div class="col-12 col-md-10 col-lg-8 col-xl-8">
-                <h2>Que token deseas crear hoy:</h2>
-                <form id="form" th:action="@{/saveToken}" method="POST">
-                    <select name="degree" id="grado">
-                        <option value="GITST">GITST</option>
-                        <option value="GIB">GIB</option>
-                        <option value="MUIT">MUIT</option>
-                        <option value="GISD">GISD</option>
-                    </select>
-                    <select name="year" id="año">
-                        <option value="All">All</option>
-                        <option value="1">Primero</option>
-                        <option value="2">Segundo</option>
-                        <option value="3">Tercero</option>
-                        <option value="4">Cuarto</option>
-                    </select>
-                    <select name="grupo" id="grupo">
-                        <option value="All">All</option>
-                        <option value="1">Grupo 1</option>
-                        <option value="2">Grupo 2</option>
-                        <option value="3">Grupo 3</option>
-                        <option value="4">Grupo 4</option>
-                        <option value="5">Grupo 5</option>
-                    </select>
-					<select name="position" id="position">
-                        <option value="All">Ambos</option>
-                        <option value="delegado">Delegado</option>
-                        <option value="subdelegado">Subdelegado</option>
-                    </select>
+    <div class="mask d-flex align-items-center h-100 global-margin-bottom"></div>
+    <div class="container h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <img th:src="@{/img/identidat.svg}" alt="logo" id="logo" class="mx-auto logo_smaller">
+        </div>
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-10 col-lg-8 col-xl-8">
 
-                    <div class="text-center">
-                        <input type="submit" id="bToken" class="btn btn-outline-secondary btn-lg"> <!--onclick="changeString()"-->
-                    </div>
-                </form>
-                <!--
-				<table id="Tokens" class="table table-striped table-hover" style="width:100%">
-					<thead>
-						<tr>
-							<th>Token</th>
-							<th>Degree</th>
-							<th>Year</th>
-							<th>Group</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr id="">
-							<td>
-								<p id="algo" class="token">a97l108g103o111</p>
-							</td>
-							<td>
-								<p id="degree">GITST</p>
-							</td>
-							<td>
-								<p id="year">4</p>
-							</td>
-							<td>
-								<p id="group">2</p>
-							</td>
-						</tr>
-					</tbody>
-				</table>
-                -->
+                <table id="census" class="table table-striped table-hover" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>Titulación</th>
+                            <th>Posición</th>
+                            <th>Diferenciador</th>
+                            <th>Token</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="token: ${tokens}">
+                            <td>
+                                <p th:text="${token.degree}"></p>
+                            </td>
+                            <td>
+                                <p th:text="${token.position}"></p>
+                            </td>
+                            <td>
+                                <p th:text="${token.diferentiator}"></p>
+                            </td>
+                            <td>
+                                <a th:href="@{'/register?token=' + ${token.token}}" th:text="${token.token}"></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </div>
-		</div>
-	</div>
-	
+        </div>
+    </div>
     </div>
 
-    <script th:src="@{/js/genToken.js}"></script>
-    <script>
-        /*document.getElementById("bToken").addEventListener("click", ()=>{
-            var codeText = document.getElementById("pruebaT");
-            const splittedWord = codeText.value.toLowerCase().split("");
-            const codes = splittedWord.map((letter) => `${letter}${String(letter).charCodeAt(0)}`);           
-            let hash = codes.join("");
-            codeText.value = "";
-            //alert("El valor del hash es:" + hash);
-            document.getElementById("algo").innerHTML = hash;
-        });*/
-    </script>
-    <script th:src="@{js/jquery-3.6.3.min.js}"></script>
-	<script th:src="@{js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/jquery-3.6.3.min.js}"></script>
+    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/js/dataTables.bootstrap5.min.js}"></script>
+    <script th:src="@{/js/adminFunctions.js}"></script>
 </body>
 
 </html>
